# mcp-servers

./: AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  docker-compose.yml
crates/cpp-perf-guidelines/: Cargo.toml
crates/cpp-perf-guidelines/src/: cache.rs  config.rs  error.rs  main.rs  model.rs  parser.rs  search.rs  server.rs  update.rs
docs/decisions/: MEMORY.md  QUEUE.md  workflow.md
