[workspace]
resolver = "2"
members = [
    "crates/mcp-common",
    "crates/cpp-guidelines",
    "crates/cpp-perf-guidelines",
    "crates/rust-api-guidelines",
    "crates/llm-proxy",
    "crates/nodejs-guidelines",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
redis = { version = "1", features = ["tokio-comp"] }
lancedb = "0.21"
anyhow = "1"
thiserror = "2"
regex = "1"
sha2 = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
arrow-array = "55"
arrow-schema = "55"
axum = "0.8"
